# Networked-Pong

./: CMakeLists.txt
src/client/: LocalSession.cpp  LocalSession.hpp  Renderer.cpp  Renderer.hpp  Session.hpp  main.cpp
src/common/: Ball.cpp  Ball.hpp  GameState.cpp  GameState.hpp  Paddle.cpp  Paddle.hpp  Protocol.hpp
